[package]
name = "blocking-01"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
strip = true

[[bin]]
path = "bins/echo_server.rs"
name = "echo_server"

[dependencies]
log = "0.4"
log4rs = "1"
clap = {version = "4.3.19", features = ["derive"]}
serde = "1.0.181"
serde_json = "1.0.79"
daemonize = "0.5.0"
